main/style.css
:root {
    --team-name-x: 48px;
    --team-red-color: #D1ED85;
    --team-blue-color: #AACAF9;
    --gold-color: #FFF6C1;
    --star-container-x: 52px;
    --gameplay-border-inner-x: 57.1px;
    --bottom-score-gradient-x: 293px;
}

/* Sunlight Dream */
@font-face {
    font-family: "Sunlight Dreams";
    src: url("../fonts/Sunlight\ Dreams.otf")
}

/* Main */
.main {
    position: absolute;
    width: 1920px;
    height: 1080px;
    top: 0;
    left: 0;
    overflow: hidden;
}
/* Background Image */
.background-image {
    position: absolute;
    width: 2267px;
    height: 2184px;
    background-size: cover;
    background-image: url(static/background.png);
    top: -551px;
    left: -347px;
}
/* Video */
video {
    position: absolute;
    top: 0;
    left: 0;
}
/* Top Banner */
.top-banner {
    position: absolute;
    width: 2062px;
    height: 395px;
    left: 50%;
    transform: translateX(-50%);
    top: -120px;
}

/* Team Name */
.team-name {
    position: absolute;
    top: 53px;
    font-family: "Sunlight Dreams";
    font-size: 48px;
}
.red-team-name { 
    color: var(--team-red-color);
    left: var(--team-name-x);
}
.blue-team-name {
    color: var(--team-blue-color);
    right: var(--team-name-x);
}

/* Star Container */
.star-container {
    position: absolute;
    top: 107px;
    display: flex;
    gap: 16px;
}
.red-star-container { left: var(--star-container-x); }
.blue-star-container {
    right: var(--star-container-x);
    flex-direction: row-reverse;
}
/* Star Wrapper */
.star-wrapper {
    --dimension: 38px;
    width: 38px;
    height: 38px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Round Name */
.round-name-background {
    position: absolute;
    left: 50%;
    top: 116px;
    transform: translateX(-50%);
}
.round-name-text {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: 121px;
    font-family: "Sunlight Dreams";
    font-size: 20px;
}

/* Gameplay Border */
.gameplay-border {
    position: absolute;
    top: 155px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
}
/* Gameplay Background */
.gameplay-background {
    position: absolute;
    width: 1795.2px;
    height: 720px;
    top: 186px;
    left: 50%;
    transform: translateX(-50%);
    background-color: red;
    z-index: 1;
}
/* Gameplay Border Inner */
.gameplay-border-inner {
    position: absolute;
    background-color: var(--gold-color);
    width: 5px;
    height: 720px;
    top: 186px;
}
.gameplay-border-inner-right { right: var(--gameplay-border-inner-x); }
.gameplay-border-inner-left { left: var(--gameplay-border-inner-x); }

/* Bottom Triangle */
.bottom-score-background {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    height: 196px;
    width: 500px;
}
.bottom-score-section {
    position: absolute;
    bottom: 0;
    left: 973px;
    transform: translateX(-50%);
}
.middle-line {
    position: absolute;
    width: 2px;
    height: 1080px;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    background-color: lightblue;
}

/* Bottom Score Gradient */
.bottom-score-gradient {
    position: absolute;
    bottom: 87px;
}
.bottom-score-gradient-left { left: var(--bottom-score-gradient-x); }
.bottom-score-gradient-right { right: var(--bottom-score-gradient-x); }

/* Score Bar */
.score-bar-leaf {
    position: absolute;
    bottom: 121px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;
}
.score-bar-line {
    position: absolute;
    bottom: 143px;
    background-color: #5C4C44;
    width: 900px;
    height: 5px;
    z-index: 1;
}
.score-bar-line-left {
    right: 50%;
    border-radius: 2.5px 0 0 2.5px;
}
.score-bar-line-right {
    left: 50%;
    border-radius: 0 2.5px 2.5px 0;
}

/* Score Difference */
.score-difference {
    position: absolute;
    bottom: 76px;
    left: 50%;
    transform: translateX(-50%);
    font-family: "Sunlight Dreams";
    font-size: 36px;
    color: white;
    font-variant-numeric: tabular-nums;
}

/* Scores */
.score {
    position: absolute;
    bottom: 90px;
    font-variant-numeric: tabular-nums;
    font-family: "Sunlight Dreams";
    font-size: 28px;
}
.score-left {
    left: 30%;
    transform: translateX(-50%);
    color: var(--team-red-color);
}
.score-right {
    right: 30%;
    transform: translateX(50%);
    color: var(--team-blue-color);
}

/* Now Playing Circle */
.now-playing-bg {
    position: absolute;
    left: 23px;
    bottom: 71px;
    transform: translateY(50%);
    width: 120px;
    height: 120px;
    border-radius: 50%;
    background: center / cover;
    background-image: url("https://assets.ppy.sh/beatmaps/2377623/covers/cover.jpg");
    z-index: 1;
}
.now-playing-circle {
    position: absolute;
    bottom: 71px;
    transform: translateY(50%);
    left: 20px;
    width: 126px;
    z-index: 1;
}

/* Now Playing Details */
.now-playing-details {
    position: absolute;
    width: 253px;
    height: 109px;
    bottom: 71px;
    left: 83px;
    transform: translateY(50%);
}
.now-playing-rectangle {
    position: absolute;
    width: 253px;
}
.now-playing-data-left {
    position: absolute;
    left: 70px;
    font-family: "Josefin Sans";
}
/* Metadata */
.now-playing-title-difficulty {
    top: 12px;
    letter-spacing: -1.25px;
}
.now-playing-artist {
    top: 31px;
    font-size: 13px;
}
/* Now Playing Stem */
.now-playing-stem {
    top: 51px;
    width: 164px;
}

/* Now Playing Stats */
.now-playing-stats {
    top: 74px;
    font-size: 11px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    width: 165px;
    row-gap: 2px;
}

/* Chat Display */
.chat-display {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 600px;
    height: 143px;
    border: 5px solid var(--gold-color);
    border-top: 0;
    border-bottom: 0;
}
.chat-display-background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.25);
}
/* Chat Display Container */
.chat-display-container {
    position: absolute;
    top: 5px;
    left: 5px;
    width: calc(100% - 10px);
    height: calc(100% - 10px);
    font-family: "Josefin Sans";
    font-weight: 500;
    color: white;
    display: flex;
    font-size: 1.25em;
    overflow-x: hidden;
    overflow-y: scroll;
    flex-direction: column;
    gap: 3px;
}
.chat-display-container::-webkit-scrollbar {
    display: none;
}
/* Message Container */
.message-container {
    display: flex;
    gap: 5px;
}
.message-name { white-space: nowrap; }
.unknown { color: lightpink; }
.bot { color: lightcoral; }
.left { color: var(--team-red-color); }
.right { color: var(--team-blue-color)}

